o Added profile to run ITs using embedded Maven
git-svn-id: https://svn.apache.org/repos/asf/maven/core-integration-testing/trunk@910121 13f79535-47bb-0310-9956-ffa450edef68